# wlanpi-mcp

./: CLAUDE.md  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-and-archive-debian-package.yml  codeql-analysis.yml  deploy-to-packagecloud.yml  python-format-police.yml  python-lint-police.yml  test-python-package.yml
debian/: changelog  control  postinst  wlanpi-mcp.install  wlanpi-mcp.service
docs/: auth-flow.md
install/etc/wlanpi-mcp/ufw/: wlanpi-mcp.rules
tests/: test_tools_phase2.py  test_tools_system.py
wlanpi_mcp/: __main__.py  server.py
wlanpi_mcp/prompts/: diagnostics.py
wlanpi_mcp/resources/: bluetooth.py  device.py  mode.py  netconfig.py  network.py  profiler.py  services.py
wlanpi_mcp/tools/: advanced.py  bluetooth.py  network.py  system.py  utils.py  vlan.py
