[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wlanpi-mcp"
description = "MCP server for the WLAN Pi"
requires-python = ">=3.13"
license = "BSD-3-Clause"
dynamic = ["version"]
authors = [
    {name = "Jake Snyder"},
]
classifiers = [
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
]

dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anyio>=4.0",
    "starlette>=0.37",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
testing = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "coverage",
]

[project.scripts]
wlanpi-mcp = "wlanpi_mcp.__main__:main"

[tool.setuptools.packages.find]
include = ["wlanpi_mcp*"]

[tool.setuptools.dynamic]
version = {attr = "wlanpi_mcp.__version__.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"
